# fortuna

./: .gitignore  README.md  pyproject.toml
requests/: auth.http  auth_logs.http  models.http
src/: config.py  constants.py  exceptions_handler.py  main.py  server.py  template.py
src/database/: collection_names.py  initiate_database.py
src/errors/: errors.py
src/libs/auth_role/: auth_role.py
src/libs/crypt/: hash.py
src/libs/jwt_fastapi/: jwt.py
src/middlewaries/: web_auth_middleware.py
src/routers/: root_router_web.py  search_router_web.py  user_guide_router_web.py
src/services/auth_logs/: auth_log_router_api.py  auth_log_router_api_schema.py  auth_log_router_web.py  auth_log_service.py
src/services/authentication/: authentication_exceptions_http.py  authentication_router_api.py  authentication_router_api_schema.py  authentication_router_web.py  authentication_router_web_schema.py  authentication_service.py  authentication_service_model.py
src/services/model/: model_router_api.py  model_router_api_schema.py  model_router_web.py  model_router_web_schema.py  model_service.py  model_service_schema.py
src/services/object/: object_router_api.py  object_router_api_schema.py  object_router_web.py  object_router_web_schema.py  object_service.py
src/services/properties/: properties_exceptions_http.py  properties_router_api.py  properties_router_api_schema.py  properties_router_web.py  properties_router_web_schema.py  properties_service.py
src/services/tokens/: token_schema.py  (+1 more)
src/types/: pagination.py
src/utils/: relative_path.py  types_decoder.py
(+72 files in other folders)
