[tool.poetry]
name = "fortuna"
version = "0.1.0"
description = ""
authors = ["Max Bredihin <billysmalldefend@gmail.com>"]
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
jinja2 = "^3.1.2"
python-multipart = "^0.0.5"
pymongo = "^4.3.3"
returns = "^0.19.0"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
dataclasses-json = "^0.5.7"
python-dateutil = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = 'src.server:start'